--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
-    "iconv-lite": "^0.4.13"
+    "iconv-lite": "^0.4.13",
+    "mongoose": "^4.5.9"
   },
   "devDependencies": {},
   "scripts": {
